--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xposed.jereksel.cursorchanger"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.(0)1" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -12,6 +12,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data android:value="true" android:name="xposedmodule"/>
+        <meta-data android:value="30+" android:name="xposedminversion"/>
     </application>
 
 </manifest>
