--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,19 +1,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xposed.jereksel.cursorchanger"
     android:versionCode="1"
-    android:versionName="0.(0)1" >
+    android:versionName="0.001" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
 
-    <application
-        android:allowBackup="true"
+    
+	<application
+		android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data android:value="true" android:name="xposedmodule"/>
+        <activity
+            android:name="com.xposed.jereksel.cursorchanger.CursorChanger"
+            android:label="@string/title_activity_main" >
+            <intent-filter>
+                <action android:name="android.intent.action.INTRO" />
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+         <meta-data android:value="true" android:name="xposedmodule"/>
         <meta-data android:value="30+" android:name="xposedminversion"/>
     </application>
-
+ 
 </manifest>
