--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,22 +10,12 @@
     
 	<application
 		android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/note_2"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.xposed.jereksel.cursorchanger.CursorChanger"
-            android:label="@string/title_activity_main" >
-            <intent-filter>
-                <action android:name="android.intent.action.INTRO" />
-                <action android:name="android.intent.action.CREATE_SHORTCUT" />
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-         <meta-data android:value="true" android:name="xposedmodule"/>
-        <meta-data android:value="30+" android:name="xposedminversion"/>
+		<meta-data android:value="true" android:name="xposedmodule"/>
+		<meta-data android:value="30+" android:name="xposedminversion"/>
+		<meta-data android:name="xposeddescription" android:value="Note 2 cursor in custom ROMs" />
     </application>
  
 </manifest>
